--- a/css/colors/blue.css
+++ b/css/colors/blue.css
@@ -1,14 +1,16 @@
 /* Blue - #3498db */
 
-
-a:link,a:visited,.navbar-default .navbar-nav>li>a:hover, 
-.navbar-default .navbar-nav>li>a:focus,a:hover,a:active,.navbar-default .navbar-nav>.active>a, 
-.navbar-default .navbar-nav>.active>a:hover, 
+.navbar-default .navbar-nav>.active>a{
+	color: white;
+}
+a:link,a:visited,.navbar-default .navbar-nav>li>a:hover,
+.navbar-default .navbar-nav>li>a:focus,a:hover,
+.navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus{
 	color:#3498db;
 }
 
-.spacer,.nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus,#grid .mix .overlay {
+.spacer, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus,#grid .mix .overlay {
 
 background: #3498db;
 }
@@ -30,5 +32,3 @@ background: #3498db;
 .btn.btn-default:active{
     color:#3498db;
 }
-
-
