--- a/css/colors/blue.css
+++ b/css/colors/blue.css
@@ -3,16 +3,13 @@
 .navbar-default .navbar-nav>.active>a{
 	color: white;
 }
-a:link,a:visited,.navbar-default .navbar-nav>li>a:hover,
-.navbar-default .navbar-nav>li>a:focus,a:hover,
-.navbar-default .navbar-nav>.active>a:hover,
-.navbar-default .navbar-nav>.active>a:focus{
+
+.nav li a:hover,.nav li a:focus{
 	color:#3498db;
 }
 
 .spacer, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus,#grid .mix .overlay {
-
-background: #3498db;
+ background: #3498db;
 }
 
 #page-contact{
