Update portfolio padding

--- a/css/main.css
+++ b/css/main.css
@@ -159,13 +159,11 @@ h1, h2, h3, h4, h5, h6 {
     padding: 75px 0;
     background: #f7f7f7;
 }
-#page-portfolio {
+#page-portfolio, #page-port {
     padding: 75px 0;
     background: #fff;
 }
-#page-port{
-    padding-bottom: 75px;
-}
+
 #page-contact {
     padding: 75px 0;
     padding-top: 15px;
